# autoeq

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json
archive/: equalizer.py  main.py
archive/rust/adaptive-equalizer/: Cargo.toml  imgui.ini
archive/rust/adaptive-equalizer/src/: app.rs  main.rs
archive/rust/adaptive-equalizer/src/audio/: engine.rs  equalizer.rs  wasapi.rs
archive/rust/adaptive-equalizer/src/gui/windows/: equalizer_window.rs  main_window.rs
main/: .cache  .env  equalizer.py  genre_presets.pkl  main.py  preset.eq  requirements.txt  spotify_integration.py  styles.qss  testing_genre.py
main/genre/: dataset.json  genre_detection.py  genre_model.pkl
main/presets/: custom_presets.pkl
rust/adaptive-equalizer/src/: main.rs
rust/adaptive-equalizer/src/audio/: engine.rs  equalizer.rs  mod.rs
rust/adaptive-equalizer/src/gui/: mod.rs
rust/adaptive-equalizer/src/gui/windows/: equalizer_window.rs  mod.rs
src/: app.tsx  settings.json
