[package]
name = "adaptive-equalizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
imgui = "0.11"
imgui-winit-support = "0.11"
imgui-glium-renderer = "0.11"
glium = "0.32"
glutin = "0.29"

# Audio
cpal = "0.15"
fundsp = "0.13"
ringbuf = "0.3"

# Error handling and utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
